--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "@tanstack/react-query": "^5.62.3",
     "@testing-library/user-event": "^14.5.2",
     "react": "^18.3.1",
@@ -37,6 +38,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^5.4.8",
-    "vitest": "^2.1.3"
+    "vitest": "^2.1.3",
+    "zod": "^3.24.0"
   }
 }
